# rust-fast_inv_sqrt

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
